[gd_scene load_steps=8 format=2]

[ext_resource path="res://minigames/deathbyastroid/assets/sprites/bg.png" type="Texture" id=1]
[ext_resource path="res://minigames/deathbyastroid/deathbyastroid.gd" type="Script" id=2]
[ext_resource path="res://minigames/deathbyastroid/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://minigames/deathbyastroid/assets/stars-1.png" type="Texture" id=4]
[ext_resource path="res://minigames/deathbyastroid/assets/stars-2.png" type="Texture" id=5]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 505 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 595.5, 6.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
margin_right = 1020.0
margin_bottom = 1020.0

[node name="Bg" type="Sprite" parent="Control"]
position = Vector2( 581.5, 499.5 )
scale = Vector2( 9.10156, 7.85156 )
texture = ExtResource( 1 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 559, 868 )

[node name="WallLeft" type="StaticBody2D" parent="." groups=["Walls"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 0, 495 )
shape = SubResource( 3 )

[node name="WallRight" type="StaticBody2D" parent="." groups=["Walls"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 1178, 495 )
shape = SubResource( 3 )

[node name="WallTop" type="StaticBody2D" parent="." groups=["Walls"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallTop"]
position = Vector2( 585.5, -3.5 )
shape = SubResource( 4 )

[node name="WallBottom" type="StaticBody2D" parent="." groups=["Walls"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallBottom"]
position = Vector2( 585.5, 996 )
shape = SubResource( 4 )

[node name="Stars1" type="Sprite" parent="."]
position = Vector2( 591, 416 )
scale = Vector2( 9.125, 9.125 )
texture = ExtResource( 4 )

[node name="Stars2" type="Sprite" parent="."]
position = Vector2( 583.5, 583.5 )
scale = Vector2( 9.16406, 9.16406 )
texture = ExtResource( 5 )

[node name="Stars3" type="Sprite" parent="."]
position = Vector2( 591.5, -709.5 )
scale = Vector2( 9.16406, 9.16406 )
texture = ExtResource( 4 )
